--- a/course/session-6/session-6-slides.Rmd
+++ b/course/session-6/session-6-slides.Rmd
@@ -17,6 +17,7 @@ library(kableExtra)
 library(vegan)
 library(ape)
 library(FD)
+library(edcpR)
 ```
 
 
@@ -57,8 +58,15 @@ Goal: reduce dimensions
 - Perform a NMDS on the species data. Which dissimilarity index should be used?
 - Try to plot the results and add the environmental variables to the plot.
 
-## Exercises (40 min)
-  
+## Part 1
+
+```{r}
+# First update package
+library(edcpR)
+data(varespec_s6, package = "edcpR")
+data(varechem_s6, package = "edcpR")
+```
+
 **PCA**
 
 - Perform a PCA on the environmental data and plot the results.
@@ -75,8 +83,10 @@ Goal: reduce dimensions
 
 ```{r, echo = T}
 
-sp <- data(varespec_s6, package = "edcpR")
-env <- data(varechem_s6, package = "edcpR")
+data(varespec_s6, package = "edcpR")
+data(varechem_s6, package = "edcpR")
+sp <- varespec_s6
+env <- varechem_s6
 env$Managementtype <- as.factor(env$Managementtype)
 env$Use <- as.factor(env$Use)
 
@@ -129,7 +139,7 @@ biplot(PCA, choices=c(1,2), type=c("text","points"))
 biplot(PCA, choices=c(1,3), type=c("text","points")) 
 ```
 
-## Exercises
+## Part 2
 
 **PCoA**
 
@@ -184,7 +194,7 @@ biplot.pcoa(PCoA, env[1:10])
 
 ```
 
-## Exercises (40 min)
+## Part 3
 
 **NMDS**
 
@@ -220,7 +230,6 @@ for (i in 1:10) {
 NMDSoutput<-data.frame(B,A)
 names(NMDSoutput) <- c("k","Solution?","Stress")
 NMDSoutput
-
 ```
 
 ## NMDS (3)
@@ -301,6 +310,6 @@ plot(ef, p.max = 0.05)
 There is NO assignment for this week's session:
 
  - Combined assigned for the session on ordination and classification
- - Online after the session on classification (December 3)
+ - Online after the session on classification (December 9th)
  
-Remember to upload Assignment 4 (Relationships & Comparing Means) by next week: **November 18, 12 pm (= at noon!)**
+Remember to upload Assignment 4 (Relationships & Comparing Means) by next week: **December 2nd, 12 pm (= at noon!)**
