--- a/course/session-5/session-5-slides.Rmd
+++ b/course/session-5/session-5-slides.Rmd
@@ -135,7 +135,6 @@ iris$Species <- as.factor(iris$Species)
 # Independent samples? --> check!
 ```
 
-# Let's consider sample size being large enough...
 
 ## Question 2 Solution
 
@@ -148,7 +147,7 @@ hist(iris %>% filter(Species == "virginica") %>% pull(sepal_length) , prob=TRUE,
 
 ## Question 2 Solution 
 
-```{r, echo=T, eval=T}
+```{r, echo=F, eval=T}
 par(mfrow = c(1,3))
 qqnorm(iris %>% filter(Species == "setosa") %>% pull(sepal_length), xlab="Sepal lenghth",main="Histogram of sepal length")
 qqline(iris %>% filter(Species == "setosa") %>% pull(sepal_length), col = "red", lwd = 2)
@@ -179,13 +178,13 @@ bartlett.test(sepal_length ~ Species, data = iris)
 
 ## Question 2 Solution
 
-```{r}
+```{r, echo = T}
 # Non-parametric tests: Kruskall-Wallis
 kruskal.test(sepal_length ~ Species, data = iris)
 ```
 ## Question 2 Solution
 
-```{r}
+```{r, , echo = T}
 # Post-hoc testing to check between samples
 library(FSA)
 # Benjamini-Hochberg adjustment, not Bonferonni (too strict)
