--- a/course/session-6/session-6-slides.Rmd
+++ b/course/session-6/session-6-slides.Rmd
@@ -2,7 +2,7 @@
 title: "Session 6"
 subtitle: "Ecological Data Collection and Processing: Exercises"
 author: "Ward Fonteyn & Stef Haesen"
-date: "02/12/2021"
+date: "25/11/2021"
 knit: (function(inputFile, encoding){
   rmarkdown::render(inputFile, encoding = encoding, output_file = "session-6-document.html", output_format = "html_document",  output_dir = "knitted");
   rmarkdown::render(inputFile, encoding = encoding, output_file = "session-6-slides.html", output_format = "ioslides_presentation", output_options = list(widescreen = T),
@@ -63,7 +63,6 @@ Goal: reduce dimensions
 ```{r, echo = T}
 # First update package
 library(edcpR)
-data(varespec_s6, package = "edcpR")
 data(varechem_s6, package = "edcpR")
 ```
 
@@ -77,14 +76,11 @@ data(varechem_s6, package = "edcpR")
 
 ```{r, echo = T}
 
-data(varespec_s6, package = "edcpR")
 data(varechem_s6, package = "edcpR")
-sp <- varespec_s6
 env <- varechem_s6
 str(env[,10:17])
 env$Managementtype <- as.factor(env$Managementtype)
 env$Use <- as.factor(env$Use)
-
 ```
 
 ## PCA (1)
@@ -92,7 +88,7 @@ env$Use <- as.factor(env$Use)
 # rda without conditions or constraints is PCA
 # We have nutrient contents (g/kg), soil depth (cm), pH (1-14)...
 # scale = TRUE for data on different scales!!
-PCA <- rda(env[,1:10], scale=TRUE) 
+PCA <- rda(env[,2:15], scale=TRUE) 
 ```
 
 ## PCA (2)
@@ -106,12 +102,12 @@ barplot(eig/sum(eig), xlab = "Principal Component",
 ## PCA (3)
 ```{r, echo = T}
 # Calculate the percent of variance explained by first two or three axes
-# First two axes explain 73% of the variance
-# First three axes explain 83% of the variance
+# First two axes explain 60% of the variance
+# First three axes explain 72% of the variance
 sum((eig/sum(eig))[1:2])
 sum((eig/sum(eig))[1:3])
 # Three dimensional representation is possible, but more difficult
-# We prefer to plot in two dimensions
+# We prefer to plot in two dimensions, but not possible here
 # Solution: plot PC1 Vs. PC2 & PC1 vs. PC3
 ```
 
@@ -144,7 +140,7 @@ biplot(PCA, choices=c(1,3), type=c("text","points"))
 # First step: create a distance matrix
 # We have quantitative and categorical environmental variables
 # We thus use Gower distance for mixed variables
-dist <- gowdis(env)
+dist <- gowdis(env[, 2:17])
 
 ```
 
@@ -179,7 +175,7 @@ biplot.pcoa(PCoA)
 
 ```{r, echo = T, warning=F}
 # However, we could work around this problem
-biplot.pcoa(PCoA, env[1:10])
+biplot.pcoa(PCoA, env[6])
 ```
 
 ## Part 3
@@ -194,6 +190,9 @@ biplot.pcoa(PCoA, env[1:10])
 ## NMDS (1)
 
 ```{r, echo = T, eval = T}
+data(varespec_s6, package = "edcpR")
+sp <- varespec_s6
+
 # Determine the number of dimensions for the final NMDS
 # Run NMDS for 1 up to 10 dimensions
 # Bray-Curtis distance matrix for species matrix with cover data
@@ -201,7 +200,7 @@ biplot.pcoa(PCoA, env[1:10])
 A<-vector() 
 B<-vector() 
 for (i in 1:10) {
-  NDMS <- metaMDS(sp, distance = "bray", k=i, autotransform = FALSE, trymax=100)
+  NDMS <- metaMDS(sp[2:45], distance = "bray", k=i, autotransform = FALSE, trymax=100)
   solution <- NDMS$converged
   stress <- NDMS$stress
   A1 <- cbind(solution,stress)
@@ -238,7 +237,7 @@ plot(NMDSoutput$`Solution?`, xlab = "# of Dimensions", ylab = "Solution", main =
 # Final result depends on the initial random placement of the points 
 # We need set a seed to make the results reproducible
 set.seed(999)
-NMDSfinal <- metaMDS(sp, distance = "bray", k=2, autotransform = FALSE, trymax=100 )
+NMDSfinal <- metaMDS(sp[2:45], distance = "bray", k=2, autotransform = FALSE, trymax=100 )
 ```
 
 ## NMDS (6)
@@ -274,7 +273,7 @@ plot(NMDSfinal, type = "p")
 ```{r, echo = T}
 # There are no environmental variables on the plot (same as PCoA)
 # We can again work around this
-ef <- envfit(NMDSfinal, env[1:10], permu = 999)
+ef <- envfit(NMDSfinal, env[2:10], permu = 999)
 ```
 
 ## NMDS (11)
